--- a/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
+++ b/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
@@ -114,3 +114,10 @@ body {
     width: 15px;
     height: 15px;
 }
+.validator{
+    vertical-align: middle !important;
+    float: left;
+    color: red;
+    font-size: 12pt;
+    height: 5px;
+}
