--- a/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
+++ b/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
@@ -125,3 +125,9 @@ body {
     font-size: 12pt;
     height: 5px;
 }
+.notification-message{
+    text-align: right;
+}
+.notification-dismiss{
+    left: 5px;
+}
