--- a/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
+++ b/TradingJournal_React/ClientApp/src/Assets/scss/common.scss
@@ -131,3 +131,8 @@ body {
 .notification-dismiss{
     left: 5px;
 }
+.linkButton{
+    border: 1px solid blue;
+    padding: 0px 2px;
+    border-radius: 3px;
+}
